[gd_scene load_steps=4 format=3 uid="uid://ct02ichkf0kqp"]

[ext_resource type="Script" path="res://multiplayer/mpmenu.gd" id="1_cxk74"]
[ext_resource type="PackedScene" uid="uid://cf12sx8vjdb8w" path="res://multiplayer/MultiplayerSystem.tscn" id="3_2v670"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76k2c"]
bg_color = Color(0.211765, 0.207843, 0.2, 1)
border_width_left = 2
border_width_top = 16
border_width_right = 2
border_width_bottom = 16
border_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="multiplayer_connector" type="CanvasLayer" node_paths=PackedStringArray("main_menu", "alias_node", "address_entry", "port_entry", "host_status")]
script = ExtResource("1_cxk74")
main_menu = NodePath("main_menu_panel")
alias_node = NodePath("main_menu_panel/MarginContainer/VBoxContainer/alias")
address_entry = NodePath("main_menu_panel/MarginContainer/VBoxContainer/address")
port_entry = NodePath("main_menu_panel/MarginContainer/VBoxContainer/port")
host_status = NodePath("host_status")

[node name="MultiplayerSystem" parent="." instance=ExtResource("3_2v670")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../players")

[node name="players" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -43.0
offset_top = -57.0
offset_right = 2060.0
offset_bottom = 1184.0
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="host_status" type="Label" parent="."]
offset_left = 40.0
offset_top = 12.0
offset_right = 80.0
offset_bottom = 35.0

[node name="main_menu_panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -182.5
offset_right = 103.0
offset_bottom = 182.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_76k2c")

[node name="MarginContainer" type="MarginContainer" parent="main_menu_panel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu_panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="HSeparator3" type="HSeparator" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="alias" type="LineEdit" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "anon"
alignment = 1

[node name="HSeparator" type="HSeparator" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="host" type="Button" parent="main_menu_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "   Start   "

[node name="UPNP_enable" type="CheckButton" parent="main_menu_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "UPNP "

[node name="address" type="LineEdit" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "address"
alignment = 1

[node name="port" type="LineEdit" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "9995"
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="join" type="Button" parent="main_menu_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="main_menu_panel/MarginContainer/VBoxContainer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="toggled" from="main_menu_panel/MarginContainer/VBoxContainer/HBoxContainer/UPNP_enable" to="." method="_on_upnp_enable_toggled"]
[connection signal="pressed" from="main_menu_panel/MarginContainer/VBoxContainer/join" to="." method="_on_join_pressed"]
